[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/games/game_01/tap_cadence.gd" type="Script" id=1]
[ext_resource path="res://assets/images/bg_02.png" type="Texture" id=2]
[ext_resource path="res://assets/images/star.png" type="Texture" id=3]
[ext_resource path="res://assets/images/soucoupe__3.png" type="Texture" id=4]
[ext_resource path="res://assets/images/soucoupe_mechant.png" type="Texture" id=5]
[ext_resource path="res://assets/images/danger_halo.png" type="Texture" id=6]
[ext_resource path="res://assets/images/finger.png" type="Texture" id=7]
[ext_resource path="res://assets/audio/sound/walk.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/sound/win.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/sound/lose.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 371.642, 333.349 )

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 2.29739, 2 ),
"update": 0,
"values": [ 60.0, -60.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../info/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2.46229, 0.25 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.301961 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../info/finger:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 3.24901, 0.378929, 1 ),
"update": 0,
"values": [ Vector2( 0.131439, 0.131439 ), Vector2( 0.0927667, 0.0927667 ), Vector2( 0.131439, 0.131439 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../info/finger:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 0.353553, 1, 1 ),
"update": 0,
"values": [ 0.0, -23.8916, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../star:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 1.1, 1.6 ),
"transitions": PoolRealArray( 1.56917, 1.8025, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../star:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 1.6 ),
"transitions": PoolRealArray( 0.554785, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../info/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "end"
}, {
"args": [  ],
"method": "win"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../info/finger:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../win_sound:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/Bungee-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 60
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -9.5, 9.49802 ]
}

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star" type="Sprite" parent="."]
position = Vector2( 378.591, 539.879 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="player" type="Node2D" parent="."]
position = Vector2( 378.591, 539.879 )
rotation = -0.712094
scale = Vector2( 3, 3 )

[node name="Sprite" type="Sprite" parent="player"]
modulate = Color( 0.72549, 0.72549, 0.72549, 1 )
position = Vector2( 5.21759, 109.893 )
scale = Vector2( 0.335874, 0.335874 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="player/Sprite"]
scale = Vector2( 0.477302, 0.477302 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Sprite/Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
autoplay = "idle"
anims/idle = SubResource( 2 )
anims/win = SubResource( 3 )

[node name="scale" type="Tween" parent="player"]

[node name="info" type="Node2D" parent="."]
position = Vector2( 0, 114.738 )

[node name="Label" type="Label" parent="info"]
margin_left = -119.334
margin_top = 253.592
margin_right = 568.666
margin_bottom = 314.593
rect_scale = Vector2( 1.25035, 1.25035 )
custom_fonts/font = SubResource( 5 )
text = "tap the ship !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="finger" type="Sprite" parent="info"]
position = Vector2( 666.421, 288.513 )
scale = Vector2( 0.131439, 0.131439 )
texture = ExtResource( 7 )

[node name="end" type="Node2D" parent="."]

[node name="Sprite" type="Node2D" parent="end"]
position = Vector2( 375.935, 537.339 )
rotation = -0.165806
scale = Vector2( 9.82663, 9.82663 )

[node name="Sprite" type="Sprite" parent="end/Sprite"]
position = Vector2( 4.65674, 75.6722 )
scale = Vector2( 0.0672624, 0.0672624 )
texture = ExtResource( 5 )

[node name="Sprite4" type="Sprite" parent="end/Sprite"]
position = Vector2( -32.0152, 91.9708 )
scale = Vector2( 0.0856255, 0.0856255 )
texture = ExtResource( 5 )

[node name="Sprite5" type="Sprite" parent="end/Sprite"]
position = Vector2( 41.9107, 97.2097 )
scale = Vector2( 0.110065, 0.110065 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="end/Sprite"]
position = Vector2( -42.4929, 53.5527 )
rotation = 0.448881
scale = Vector2( 0.0447931, 0.0447931 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="end/Sprite"]
position = Vector2( 52.9705, 55.8811 )
rotation = -0.549123
scale = Vector2( 0.0492015, 0.0492015 )
texture = ExtResource( 5 )

[node name="halo" type="Sprite" parent="end/Sprite"]
position = Vector2( -0.60265, 0.0874557 )
rotation = -0.165772
scale = Vector2( 0.409317, 0.409317 )
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="end"]

[node name="enemi" type="AnimationPlayer" parent="end"]
autoplay = "idle"
anims/idle = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="end"]
visible = false
margin_left = -35.0
margin_top = -34.0
margin_right = 858.0
margin_bottom = 1360.0
mouse_filter = 2
color = Color( 0.6, 0, 0, 0 )

[node name="color" type="Tween" parent="end"]

[node name="end_timer" type="Timer" parent="end"]

[node name="walk_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="win_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="lose_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="input_event" from="player/Sprite/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="tween_step" from="end/Tween" to="." method="_on_Tween_tween_step"]
[connection signal="timeout" from="end/end_timer" to="." method="_on_end_timer_timeout"]
